Common - NovaService improve skfs cache and logs